--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CurrencyConverterApp</string>
+    <string name="currency_converter">Currency Converter</string>
 </resources>
