--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="currency_converter">Currency Converter</string>
     <string name="base_currency">Base Currency</string>
     <string name="value">Value</string>
+    <string name="add_target_currency">Add Target Currency</string>
+    <string name="target_currency">Target Currency</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
 </resources>
