--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="target_currency">Target Currency</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
+    <string name="close">Close</string>
+    <string name="delete">Delete</string>
 </resources>
