Set up basic currency charts, add a switch for creating a column chart and a dropdown that lets the user select time period for the chart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="add">Add</string>
     <string name="close">Close</string>
     <string name="delete">Delete</string>
+    <string name="time_period">Time Period</string>
+    <string name="column_chart">Column Chart</string>
 </resources>
