Implement chart generation with adaptive x and y axes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="close">Close</string>
     <string name="delete">Delete</string>
     <string name="time_period">Time Period</string>
-    <string name="column_chart">Column Chart</string>
+    <string name="column_chart">Column Charts</string>
 </resources>
