Display a snackbar with message after a currency has been deleted, add an option to undo currency deletion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="time_period">Time Period</string>
     <string name="column_chart">Column Charts</string>
     <string name="swap_currencies">Swap Currencies</string>
+    <string name="currency_deleted_message">Currency Deleted</string>
+    <string name="undo">Undo</string>
 </resources>
