Implement basic error and loading state handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="swap_currencies">Swap Currencies</string>
     <string name="currency_deleted_message">Currency Deleted</string>
     <string name="undo">Undo</string>
+    <string name="network_off">Network Off</string>
+    <string name="error_loading_currency_data">Error Loading Currency Data</string>
+    <string name="try_again">Try Again</string>
+    <string name="error_loading_exchange_rates">Error Loading Exchange Rates</string>
+    <string name="error_loading_historical_exchange_rates">Error Loading Historical Exchange Rates</string>
 </resources>
