Update the currency value text input, display an error when user enters invalid number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="error_loading_exchange_rates">Error Loading Exchange Rates</string>
     <string name="error_loading_chart_data">Error Loading Chart Data</string>
     <string name="loading_data">Loading Data</string>
+    <string name="error">Error</string>
+    <string name="enter_decimal_number">Enter a decimal number</string>
 </resources>
