--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="error_loading_currency_data">Error Loading Currency Data</string>
     <string name="try_again">Try Again</string>
     <string name="error_loading_exchange_rates">Error Fetching Latest Exchange Rates</string>
-    <string name="error_loading_chart_data">Error Loading Chart Data</string>
+    <string name="error_loading_chart_data">Error Loading New Chart Data</string>
     <string name="loading_data">Loading Data</string>
     <string name="error">Error</string>
     <string name="enter_decimal_number">Enter a decimal number</string>
