Handle notification permissions (granted, show rationale and permanently denied states), make minor improvements to the network requests error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,7 @@
     <string name="notification_when">%s is %s %s</string>
     <string name="update">Update</string>
     <string name="watchlist_notifications">Watchlist Notifications</string>
+    <string name="notifications_dialog_title">Notifications Permission Required</string>
+    <string name="notifications_dialog_text">You have permanently declined the notifications permission. You can go to the app settings to grant it.</string>
+    <string name="launch_app_settings">Launch App Settings</string>
 </resources>
