--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="add">Add</string>
     <string name="close">Close</string>
     <string name="delete">Delete</string>
-    <string name="time_period">Time Period</string>
+    <string name="recent_time_period">Time Period</string>
     <string name="column_chart">Column Charts</string>
     <string name="swap_currencies">Swap Currencies</string>
     <string name="currency_deleted_message">Currency Deleted</string>
